tests/is/comptime_types.rev
var a: int = 1

print a is float // error: variable is not of type 'int'